refact: refactoring method to be better understandable